force-app/main/default/objects/Shipment__c/fields/Consignee_PAN_TMS__c.field-meta.xml
<CustomField>
    <fullName>Consignee_PAN_TMS__c</fullName>
    <formula>Consignee_Name_TMS__r.PAN_Number_of_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee PAN</label>
    <type>Text</type>
</CustomField>