force-app/main/default/objects/Shipment__c/fields/Consignor_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignor_Code__c</fullName>
    <label>Consignor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>