force-app/main/default/objects/Shipment__c/fields/count_misrouted_bags__c.field-meta.xml
<CustomField>
    <fullName>count_misrouted_bags__c</fullName>
    <label>count misrouted bags</label>
    <summaryFilterItems>
        <field>Secure_Bag__c.Is_Misrouted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Secure_Bag__c.Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>