force-app/main/default/objects/Shipment__c/fields/Customer_App__c.field-meta.xml
<CustomField>
    <fullName>Customer_App__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>