force-app/main/default/objects/Shipment__c/fields/Customer_Appointment_Confimation_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Appointment_Confimation_Details__c</fullName>
    <label>Customer Appointment Confimation Details</label>
    <type>TextArea</type>
</CustomField>