force-app/main/default/objects/Shipment__c/fields/Customer_Category_Static__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_Static__c</fullName>
    <formula>TEXT ( Customer__r.Customer_Category_Static__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Category (Static)</label>
    <type>Text</type>
</CustomField>