force-app/main/default/objects/Shipment__c/fields/Customer_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Document_Number__c</fullName>
    <label>Customer Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>