force-app/main/default/objects/Shipment__c/fields/Customer_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Date__c</fullName>
    <description>Clearance</description>
    <label>Customer Invoice Date</label>
    <type>Date</type>
</CustomField>