force-app/main/default/objects/Shipment__c/fields/Customer_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Number__c</fullName>
    <description>Clearance</description>
    <label>Customer Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>