force-app/main/default/objects/Shipment__c/fields/Customer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Category__c</fullName>
    <label>BVC Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ValSHIP</fullName>
            </value>
            <value>
                <fullName>GoldSHIP</fullName>
            </value>
            <value>
                <fullName>SilverSHIP</fullName>
            </value>
            <value>
                <fullName>LuxeSHIP</fullName>
            </value>
            <value>
                <fullName>GenSHIP</fullName>
            </value>
            <value>
                <fullName>BATH</fullName>
            </value>
            <value>
                <fullName>eSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>