force-app/main/default/objects/Shipment__c/fields/Customer_Product_Currency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Currency__c</fullName>
    <description>All</description>
    <label>Customer Product Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>