force-app/main/default/objects/Shipment__c/fields/Customer_Product_FOB_CIF_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_FOB_CIF_Value__c</fullName>
    <description>Clearance</description>
    <label>Customer Product FOB/CIF  Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>