force-app/main/default/objects/Shipment__c/fields/Customer_Product_FOB_CIF_Value_INR__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_FOB_CIF_Value_INR__c</fullName>
    <description>Clearance</description>
    <label>Customer Product FOB/CIF Value INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>