force-app/main/default/objects/Shipment__c/fields/Customer_Product_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_name__c</fullName>
    <label>Customer Product name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>