force-app/main/default/objects/Shipment__c/fields/Customer_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Value__c</fullName>
    <description>International &amp; Domestic</description>
    <label>Customer Product Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>