force-app/main/default/objects/Shipment__c/fields/Customer_Status_TextField__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_TextField__c</fullName>
    <label>Customer Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>