force-app/main/default/objects/Shipment__c/fields/Customs_Duty__c.field-meta.xml
<CustomField>
    <fullName>Customs_Duty__c</fullName>
    <label>Customs Duty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>