force-app/main/default/objects/Shipment__c/fields/Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Declared_Value__c</fullName>
    <label>Declared Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>