force-app/main/default/objects/Shipment__c/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <label>Delivered At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>