force-app/main/default/objects/Shipment__c/fields/Delivered_To_Person_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Delivered_To_Person_Identifier__c</fullName>
    <label>Delivered To Person Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>