force-app/main/default/objects/Shipment__c/fields/Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instruction__c</fullName>
    <label>Delivery Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
                <default>true</default>
                <label>Select</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>-None-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>