force-app/main/default/objects/Shipment__c/fields/Delivery_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Remarks__c</fullName>
    <label>Tracking Status Changed Remarks</label>
    <type>TextArea</type>
</CustomField>