force-app/main/default/objects/Shipment__c/fields/Delivery_Route_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>