force-app/main/default/objects/Shipment__c/fields/Delivery_Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Route_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Route__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>