force-app/main/default/objects/Shipment__c/fields/Delivery_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time_Date__c</fullName>
    <label>Delivery Time &amp; Date</label>
    <type>DateTime</type>
</CustomField>