force-app/main/default/objects/Shipment__c/fields/DeliverybySafe__c.field-meta.xml
<CustomField>
    <fullName>DeliverybySafe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeliverybySafe</label>
    <type>Checkbox</type>
</CustomField>