force-app/main/default/objects/Shipment__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>This is a field for all businesses</description>
    <label>Destination</label>
    <length>20</length>
    <type>Text</type>
</CustomField>