force-app/main/default/objects/Shipment__c/fields/Destination_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_City__c</fullName>
    <formula>TEXT(Destination_Address_Name__r.Active_Pincode__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address City</label>
    <type>Text</type>
</CustomField>