force-app/main/default/objects/Shipment__c/fields/Destination_Address_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Contact_Name__c</fullName>
    <label>Destination Address Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>