force-app/main/default/objects/Shipment__c/fields/Destination_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Country__c</fullName>
    <formula>Destination_Address_Name__r.COUNTRY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Country</label>
    <type>Text</type>
</CustomField>