force-app/main/default/objects/Shipment__c/fields/Destination_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_ID__c</fullName>
    <formula>Destination_Address_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address ID</label>
    <type>Text</type>
</CustomField>