force-app/main/default/objects/Shipment__c/fields/Destination_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Line1__c</fullName>
    <formula>Destination_Address_Name__r.ADDRESS1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Line 1</label>
    <type>Text</type>
</CustomField>