force-app/main/default/objects/Shipment__c/fields/Destination_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Line_2__c</fullName>
    <formula>Destination_Address_Name__r.ADDRESS2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Line 2</label>
    <type>Text</type>
</CustomField>