force-app/main/default/objects/Shipment__c/fields/Destination_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Address Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Consignee_Name_TMS__c</field>
            <operation>equals</operation>
            <valueField>AddressBook__c.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipment Delivery</relationshipLabel>
    <relationshipName>ShipmentsDelivery</relationshipName>
    <type>Lookup</type>
</CustomField>