force-app/main/default/objects/Shipment__c/fields/Destination_Address_Name_App__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Name_App__c</fullName>
    <label>Destination Address Name</label>
    <type>TextArea</type>
</CustomField>