force-app/main/default/objects/Shipment__c/fields/Destination_Address_Person__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Person__c</fullName>
    <formula>Destination_Address_Name__r.People__r.FirstName + &apos; &apos; + Destination_Address_Name__r.People__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Person</label>
    <type>Text</type>
</CustomField>