force-app/main/default/objects/Shipment__c/fields/Destination_Address_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Pincode__c</fullName>
    <formula>/*Destination_Address_Name__r.PINCODE__c*/
IF( Destination_Address_Name__c != null,Destination_Address_Name__r.PINCODE__c,  Destination_Pincode__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Pincode</label>
    <type>Text</type>
</CustomField>