force-app/main/default/objects/Shipment__c/fields/Destination_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_State__c</fullName>
    <formula>Destination_Address_Name__r.STATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address State</label>
    <type>Text</type>
</CustomField>