force-app/main/default/objects/Shipment__c/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <label>Destination Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>