force-app/main/default/objects/Shipment__c/fields/Destination_Airport_Retrieval_Time__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport_Retrieval_Time__c</fullName>
    <label>Destination Airport Retrieval Time</label>
    <type>DateTime</type>
</CustomField>