force-app/main/default/objects/Shipment__c/fields/Destination_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>Destination_COUNTRY__c</fullName>
    <description>International &amp; Clearance</description>
    <label>Destination COUNTRY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>