force-app/main/default/objects/Shipment__c/fields/Destination_Hub__c.field-meta.xml
<CustomField>
    <fullName>Destination_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Shipments (Destination Hub)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>