force-app/main/default/objects/Shipment__c/fields/Destination_Hub_Manager__c.field-meta.xml
<CustomField>
    <fullName>Destination_Hub_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Hub Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipments3</relationshipName>
    <type>Lookup</type>
</CustomField>