force-app/main/default/objects/Shipment__c/fields/Destination_Hub_Scan_Time__c.field-meta.xml
<CustomField>
    <fullName>Destination_Hub_Scan_Time__c</fullName>
    <label>Destination Hub Scan Time</label>
    <type>DateTime</type>
</CustomField>