force-app/main/default/objects/Shipment__c/fields/Destination_Pin_Code_App__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pin_Code_App__c</fullName>
    <label>Destination Pin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>