force-app/main/default/objects/Shipment__c/fields/Destination_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pincode__c</fullName>
    <label>Destination Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>