force-app/main/default/objects/Shipment__c/fields/Destination_Pincode_Type__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pincode_Type__c</fullName>
    <label>Destination Pincode Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>