force-app/main/default/objects/Shipment__c/fields/Deviation_B_W_Estimated_Actual_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Deviation_B_W_Estimated_Actual_In_Days__c</fullName>
    <formula>DATEVALUE(Actual_Delivery_Date_and_Time__c) -  Estimated_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviation B/W Estimated &amp; Actual In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>