force-app/main/default/objects/Shipment__c/fields/Dimensions_UOM__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_UOM__c</fullName>
    <label>Dimensions UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inch</fullName>
            </value>
            <value>
                <fullName>Centimeter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>