force-app/main/default/objects/Shipment__c/fields/Docket_Date__c.field-meta.xml
<CustomField>
    <fullName>Docket_Date__c</fullName>
    <label>Docket Date</label>
    <type>DateTime</type>
</CustomField>