force-app/main/default/objects/Shipment__c/fields/Docket_No__c.field-meta.xml
<CustomField>
    <fullName>Docket_No__c</fullName>
    <label>Docket No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>