force-app/main/default/objects/Shipment__c/fields/DocketPhoto__c.field-meta.xml
<CustomField>
    <fullName>DocketPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocketPhoto</label>
    <type>Checkbox</type>
</CustomField>