force-app/main/default/objects/Shipment__c/fields/DSN__c.field-meta.xml
<CustomField>
    <fullName>DSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSN</label>
    <type>Checkbox</type>
</CustomField>