force-app/main/default/objects/Shipment__c/fields/E_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_Number__c</fullName>
    <label>E-Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>