force-app/main/default/objects/Shipment__c/fields/E_Waybill_Number__c.field-meta.xml
<CustomField>
    <fullName>E_Waybill_Number__c</fullName>
    <label>E-Waybill Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>