force-app/main/default/objects/Shipment__c/fields/EDI_Job_No__c.field-meta.xml
<CustomField>
    <fullName>EDI_Job_No__c</fullName>
    <label>EDI Job No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>