force-app/main/default/objects/Shipment__c/fields/EGM_Date__c.field-meta.xml
<CustomField>
    <fullName>EGM_Date__c</fullName>
    <label>EGM Date</label>
    <type>Date</type>
</CustomField>