force-app/main/default/objects/Shipment__c/fields/EGM_No__c.field-meta.xml
<CustomField>
    <fullName>EGM_No__c</fullName>
    <label>EGM No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>