force-app/main/default/objects/Shipment__c/fields/ER_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Date__c</fullName>
    <label>ER Date</label>
    <type>Date</type>
</CustomField>