force-app/main/default/objects/Shipment__c/fields/ER_NO__c.field-meta.xml
<CustomField>
    <fullName>ER_NO__c</fullName>
    <label>ER NO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>