force-app/main/default/objects/Shipment__c/fields/Excel_Improper_Data__c.field-meta.xml
<CustomField>
    <fullName>Excel_Improper_Data__c</fullName>
    <label>Excel Improper Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>