force-app/main/default/objects/Shipment__c/fields/Excel_Sheet_Row__c.field-meta.xml
<CustomField>
    <fullName>Excel_Sheet_Row__c</fullName>
    <defaultValue>&quot;Manually Created Shipment&quot;</defaultValue>
    <label>Excel Sheet Row</label>
    <length>255</length>
    <type>Text</type>
</CustomField>