force-app/main/default/objects/Shipment__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exhibition Name</label>
    <referenceTo>ST_Exhibition__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments9</relationshipName>
    <type>Lookup</type>
</CustomField>