force-app/main/default/objects/Shipment__c/fields/Exhibition_Code__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Code__c</fullName>
    <label>Exhibition Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>