force-app/main/default/objects/Shipment__c/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <description>This is a field for International business</description>
    <label>Exhibition Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>