force-app/main/default/objects/Shipment__c/fields/Exhibition_Return_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Return_Shipment__c</fullName>
    <label>Exhibition Return Shipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>