force-app/main/default/objects/Shipment__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flag</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>