force-app/main/default/objects/Shipment__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <description>This is to capture the terms of Freight for Domestic &amp; International</description>
    <label>Freight Terms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>