force-app/main/default/objects/Shipment__c/fields/From_City__c.field-meta.xml
<CustomField>
    <fullName>From_City__c</fullName>
    <label>From City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>