force-app/main/default/objects/Shipment__c/fields/GR_No__c.field-meta.xml
<CustomField>
    <fullName>GR_No__c</fullName>
    <label>GR No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>