force-app/main/default/objects/Shipment__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <description>The shipment weight to be used for all kind of shipments</description>
    <label>BVC Gross Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>