force-app/main/default/objects/Shipment__c/fields/Gross_weight_in_Gram__c.field-meta.xml
<CustomField>
    <fullName>Gross_weight_in_Gram__c</fullName>
    <formula>CASE( TEXT(Gross_Weight_UOM_TMS__c), &apos;KG&apos;, Gross_Weight__c * 1000,
				&apos;Carat&apos;, Gross_Weight__c * 0.20, Gross_Weight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross weight in Gram</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>