force-app/main/default/objects/Shipment__c/fields/Gross_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_UOM__c</fullName>
    <label>Gross Weight UOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>