force-app/main/default/objects/Shipment__c/fields/Handover_Done__c.field-meta.xml
<CustomField>
    <fullName>Handover_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Done</label>
    <type>Checkbox</type>
</CustomField>