force-app/main/default/objects/Shipment__c/fields/HAWB__c.field-meta.xml
<CustomField>
    <fullName>HAWB__c</fullName>
    <description>This field will be used for International &amp; Clearance</description>
    <label>HAWB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>