force-app/main/default/objects/Shipment__c/fields/HAWB_Date__c.field-meta.xml
<CustomField>
    <fullName>HAWB_Date__c</fullName>
    <description>This is the date field for International &amp; Clearance</description>
    <label>HAWB Date</label>
    <type>Date</type>
</CustomField>