force-app/main/default/objects/Shipment__c/fields/Height_In_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_In_cm__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>