force-app/main/default/objects/Shipment__c/fields/Hub_Master__c.field-meta.xml
<CustomField>
    <fullName>Hub_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Master</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>