force-app/main/default/objects/Shipment__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <label>IGST</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>