force-app/main/default/objects/Shipment__c/fields/ILO_inward_at_BVC_facility__c.field-meta.xml
<CustomField>
    <fullName>ILO_inward_at_BVC_facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ILO inward at BVC facility</label>
    <type>Checkbox</type>
</CustomField>