force-app/main/default/objects/Shipment__c/fields/ILO_No__c.field-meta.xml
<CustomField>
    <fullName>ILO_No__c</fullName>
    <label>ILO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>