force-app/main/default/objects/Shipment__c/fields/Indirect_Account__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Account__c</fullName>
    <label>Indirect Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>