force-app/main/default/objects/Shipment__c/fields/Initiator_Account__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiator Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Initiator Account)</relationshipLabel>
    <relationshipName>Shipments6</relationshipName>
    <type>Lookup</type>
</CustomField>