force-app/main/default/objects/Shipment__c/fields/Insurance_By__c.field-meta.xml
<CustomField>
    <fullName>Insurance_By__c</fullName>
    <label>Insurance By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVC</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Consignee</fullName>
                <isActive>false</isActive>
                <label>Consignee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>