force-app/main/default/objects/Shipment__c/fields/Insurance_By_BVC__c.field-meta.xml
<CustomField>
    <fullName>Insurance_By_BVC__c</fullName>
    <label>Insurance By BVC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>