force-app/main/default/objects/Shipment__c/fields/Insurance_Liability__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Liability__c</fullName>
    <description>This is a field for Domestic &amp; International businesses</description>
    <label>Insurance Liability</label>
    <length>20</length>
    <type>Text</type>
</CustomField>