force-app/main/default/objects/Shipment__c/fields/Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Amount__c</fullName>
    <label>Invoice Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>