force-app/main/default/objects/Shipment__c/fields/Invoice_Photo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Photo__c</fullName>
    <label>Invoice Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>